Remove genre/studio spacing fix

--- a/hb-fixes.css
+++ b/hb-fixes.css
@@ -1363,7 +1363,6 @@
     .series-info .genres li,
     .series-info .studios li {
         text-decoration: none;
-        margin-right: 10px;
     }
     .series-info .small-label {
         margin-top: 3px;
